k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deuseda
  labels:
    name: deuseda
    app: deuseda
