k8s/base/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deuseda-frontend
  namespace: default
spec:
  selector:
    app: deuseda-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deuseda-frontend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deuseda-frontend
  template:
    metadata:
      labels:
        app: deuseda-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/e16tae/deuseda-frontend:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
